# ludamus

./: .dockerignore  .env.ci  .env.dev  .env.development  .env.docker.example  .env.e2e  .env.example  .env.local.example  .env.schema  .env.test  .gitignore  .pre-commit-config.yaml  .pylintrc  .testenv  .yamllint.yaml  AGENTS.md  CLAUDE.md  CR.md  Dockerfile  FEATURE_PLAN.md  LICENSE  NOTES.md  PLAN.md  Procfile.dev  Procfile.tailwind  README.md  REFACTOR.md  TAILWIND_MIGRATION_PLAN.md  TEST_PLAN.md  TODO.md  aube-lock.yaml  aube-workspace.yaml  docker-compose.yml  mise.toml  mockup-1.html  mockup-2.html  package.json  pyproject.toml  tailwind.config.js  tasks.toml
.claude/: settings.local.json
.claude/commands/: tbd-fire.md  tbd-plan.md  tbd-refine.md  tbd-story.md  tracer-analysis.md  tracer-canvas.md  tracer-generate.md  tracer-sync.md  tracer-update.md
.claude/skills/tessa/: SKILL.md
.devcontainer/: Dockerfile  bashrc  devcontainer.json
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  ios-modal-regression.yml  mobile.yml  mutation.yml
backoffice/: categories.html  changelog.html  door-cards.html  hosts.html  index.html  organizers.html  proposals.html  settings.html  sphere-settings.html  timetable.html  venues.html
docker/: Dockerfile  Procfile.dev  Procfile.tailwind  mise.toml
docker/compose/: local.yaml  prod.yaml
docs/: CLAUDE.md  CODE_LAYOUT.md  DEPLOYMENT.md  PARAGON.tsx  REFACTOR.md  TESTING_STRATEGY.md  UI_STYLE.md  hexagonal_refactor.md
docs/agents/: architecture.md  services-migration.md  testing-assertions.md
docs/features/: CHECKLIST.md  README.md
docs/features/chronology/panel/: event-integration-configuration.md  import-apply-mapping.md  import-mapping.md  import-pull-proposals.md  import-service-configuration.md  proposal-category-ordering.md  proposal-review.md  session-search.md  timetable-space-filter.md
docs/features/crowd/email/: verification.md
docs/features/multiverse/panel/: event-create.md  import-connections-auth-check.md  import-connections-deletion-guard.md  (+3 more)
docs/refactors/: links-db-layout.md  pacts-mills-split.md
fixtures/: 01_base_setup.json  02_events_without_sessions.json  03_events_with_sessions.json  04_sessions_with_time_slots.json  05_limited_capacity_sessions.json  06_proposal_periods.json  07_tags_and_categories.json  08_connected_users.json
plans/: proposal_management.md
requirements/: import-apply-mapping.md  import-configuration.md  import-connections.md  import-drift.md  import-mapping.md  import-pull-proposals.md  remove-tags.md
rules/: no-inline-color-var.yml  no-inline-theme-var.yml
scripts/: auth0-simulator-dev  bootstrap_dev.py  dev  entrypoint.sh  impeccable_lint.py  reproduce-ios-modal-bugs.sh  reproduce-ios-modal-bugs.ts
spdd-tracer/analysis/: 202605011947-import-connections-creds-encryption.md  202605011947-import-connections-encryption-and-google-api.md  202605011947-import-connections-google-api-connection.md  202605011947-import-connections-sphere-crud.md  202605031704-remove-tags-and-session-text-fields.md  202605031704-remove-tags-schema-migration.md
spdd-tracer/prompt/: 202605012002-Add-import-connections-sphere-crud.md  202605020624-Add-import-connections-creds-encryption.md  202605031704-Remove-tags-and-session-text-fields.md
src/ludamus/: binds.py  gears.py  inits.py  manage.py  mills.py  old.sqlite3  pacts.py  specs.py
src/ludamus/adapters/: oauth.py
src/ludamus/client/: package-lock.json  package.json  postcss.config.js  vite.config.ts
src/ludamus/config/: settings.py  urls.py
src/ludamus/edges/: asgi.py  manage.py  settings.py  wsgi.py
src/ludamus/inits/: __init__.py  clients.py  legacy.py  middleware.py  repositories.py  services.py  transaction.py
src/ludamus/links/: cache.py  dao.py  encryption.py  google_docs.py  gravatar.py  ticket_api.py
src/ludamus/mills/: __init__.py  chronology.py  event_api_connections.py  legacy.py  multiverse.py
src/ludamus/pacts/: __init__.py  chronology.py  external_apis.py  legacy.py  multiverse.py  services.py
src/ludamus/specs/: encounter.py  external_apis.py
src/ludamus/templates/: 404_dynamic.html  500_dynamic.html  base.html  base_tailwind.html  design.html  design_tailwind.html  index.html  index_tailwind.html
src/ludamus/theme/: apps.py
tests/: conftest.py  template_checks.py
tests/e2e/: .auth-state-empty.json  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/playwright-report/: index.html
tests/e2e/scripts/: bootstrap_data.py  bootstrap_facilitators.py  bootstrap_proposal_form.py  bootstrap_proposals.py  bootstrap_session_fields.py  bootstrap_timetable.py
tests/e2e/tests/: cover-images.spec.ts  design.spec.ts  enrollment-flow.spec.ts  event-details.spec.ts  event-filters.spec.ts  flatpages.spec.ts  index.spec.ts  modal-surfaces.auth.spec.ts  notice-board.auth.spec.ts  panel.spec.ts  profile.auth.spec.ts  smoke.spec.ts  timetable.spec.ts
tests/integration/: conftest.py  factories.py  test_combined_enrollment_access.py  test_error_views.py  test_forms.py  test_membership_api.py  test_middlewares.py  test_missing_coverage.py  test_models.py  test_multiple_enrollment_configs.py  test_user_enrollment_config.py  test_views.py  utils.py
tests/integration/cli/: test_downloadvendor.py
tests/integration/links/: test_agenda_item_repository.py  test_connection_repository.py  test_credential_repo.py  test_event_api_connection_repository.py  test_google_docs.py  test_repositories_not_found.py
tests/integration/views/: test_design_page.py  test_index_page.py
tests/integration/web/: test_design_page.py  test_healthz.py  test_index_page.py  test_middlewares.py  test_theme_selection_action.py
tests/unit/: test_chronology_mills.py  test_event_settings.py  test_gears_permissions.py  test_mills.py  test_models.py  test_pacts.py  test_panel_template_theme_tokens.py  test_template_checks.py
tests/unit/links/: test_external_apis_registry.py  test_external_apis_ticket_api.py  test_google_docs.py  test_shop_api_generic.py  test_shop_api_registry.py
(+522 files in other folders)
