[project]
name = "ludamus"
version = "0.1.0"
description = "Event management website"
authors = [
    { name = "Radosław Ganczarek", email = "radoslaw@ganczarek.in" },
    { name = "hasparus", email = "hasparus@gmail.com" },
    { name = "lprasol", email = "lprasol@gmail.com" },
]
license = { text = "BSD-3-Clause license" }
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dynamic = ['dependencies']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
authlib = "~1.6.0"
django = "~5.2.2"
django-bootstrap5 = "~25.2.0"
django-bootstrap-icons = "~0.9.0"
gunicorn = "^23.0.0"
django-environ = "^0.12.0"
psycopg = "^3.2.9"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
codespell = "^2.4.1"
deptry = "^0.23.0"
django-debug-toolbar = "^6.0.0"
django-stubs = "^5.2.0"
djlint = "^1.36.4"
factory-boy = "^3.3.3"
faker = "^37.4.0"
freezegun = "^1.5.2"
mypy = "^1.16.0"
poethepoet = "^0.36.0"
pylint = "^3.3.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"
ruff = "^0.12.0"
types-authlib = "^1.5.0.20250516"

# POE
pytest-freezeblaster = "^2.0.4"

[tool.poe]
envfile = ".env.dev"

[tool.poe.env]
PYTHONPATH = "src"
DJANGO_SETTINGS_MODULE = "ludamus.config.settings"

[tool.poe.tasks]
# Tools
black = "black ."
black-check = "black --check ."
codespell = "codespell src tests"
deptry = "deptry ."
djlint = "djlint . --profile=django"
djlint-format = "djlint . --reformat --format-css --format-js --profile=django"
mypy = "mypy ."
pylint = "pylint ."
ruff = "ruff check ."
ruff-fix = "ruff check --fix  ."
# Django
dj = "django-admin"
start = "django-admin runserver ludamus.local:8000"
# Tests
unittest = "pytest tests/unit --cov=tests.unit --cov=ludamus"
# Series
check = [
    "black",
    "ruff-fix",
    "codespell",
    "mypy",
    "djlint",
    "djlint-format",
    "pylint",
]
prcheck = [
    "black-check",
    "ruff",
    "codespell",
    "mypy",
    "djlint",
    "pylint",
]
update = [
    { cmd = "pre-commit autoupdate" },
    { cmd = "pip install -U pip" },
    { cmd = "pip install -U poetry" },
    { cmd = "poetry update" },
    { cmd = "deptry ." },
    { cmd = "poetry show -o" },
]

[tool.poe.tasks.inttest]
cmd = "pytest"
envfile = ".testenv"

# BLACK

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py313']

# CODESPELL

[tool.codespell]
skip = '*.po,*.lock'

# COVERAGE

[tool.coverage.run]
branch = true
source = ["src", "tests"]
omit = [
    "src/ludamus/config/*",
    "src/ludamus/deploy/*",
    "src/ludamus/adapters/db/django/migrations/*",
    "src/ludamus/adapters/web/django/templatetags/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:", "# pragma: no cover"]
precision = 2

# DEPTRY

[tool.deptry]
known_first_party = ["ludamus"]

[tool.deptry.per_rule_ignores]
DEP002 = ["django-bootstrap5", "django-bootstrap-icons", "gunicorn", "psycopg"]
DEP004 = ["debug_toolbar"]

# MYPY

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["migrations/.*.py", "tests/.*.py"]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "ludamus.config.settings"

[[tool.mypy.overrides]]
module = ["debug_toolbar.toolbar"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true

# PYTEST

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ludamus.config.settings"

# RUFF

[tool.ruff]
fix = false
line-length = 88
output-format = 'concise'
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM",
    "CPY",
    "D",
    "PLR0911",
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/**.py" = ["ANN", "ARG001", "E501", "RUF012"]
"tests/**.py" = [
    "ANN",     # flake8-annotations
    "PLR0913", # too-many-arguments
    "PLR0917", # too-many-positional-arguments
    "S101",    # assert
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.importlinter]
root_package = "ludamus"

[[tool.importlinter.contracts]]
name = "gates not in gears"
type = "forbidden"
source_modules = ["ludamus.gears"]
forbidden_modules = ["ludamus.gates"]

[[tool.importlinter.contracts]]
name = "gates not in links"
type = "forbidden"
source_modules = ["ludamus.links"]
forbidden_modules = ["ludamus.gates"]

[[tool.importlinter.contracts]]
name = "gates not in pacts"
type = "forbidden"
source_modules = ["ludamus.pacts"]
forbidden_modules = ["ludamus.gates"]

[[tool.importlinter.contracts]]
name = "gears not in specs"
type = "forbidden"
source_modules = ["ludamus.specs"]
forbidden_modules = ["ludamus.gears"]

[[tool.importlinter.contracts]]
name = "links not in gates"
type = "forbidden"
source_modules = ["ludamus.gates"]
forbidden_modules = ["ludamus.links"]

[[tool.importlinter.contracts]]
name = "links not in gears"
type = "forbidden"
source_modules = ["ludamus.gears"]
forbidden_modules = ["ludamus.links"]

[[tool.importlinter.contracts]]
name = "links not in pacts"
type = "forbidden"
source_modules = ["ludamus.pacts"]
forbidden_modules = ["ludamus.links"]

[[tool.importlinter.contracts]]
name = "links not in specs"
type = "forbidden"
source_modules = ["ludamus.specs"]
forbidden_modules = ["ludamus.links"]

[[tool.importlinter.contracts]]
name = "specs not in gates"
type = "forbidden"
source_modules = ["ludamus.gates"]
forbidden_modules = ["ludamus.specs"]

[[tool.importlinter.contracts]]
name = "specs not in gears"
type = "forbidden"
source_modules = ["ludamus.gears"]
forbidden_modules = ["ludamus.specs"]

[[tool.importlinter.contracts]]
name = "specs not in links"
type = "forbidden"
source_modules = ["ludamus.links"]
forbidden_modules = ["ludamus.specs"]

[[tool.importlinter.contracts]]
name = "specs not in pacts"
type = "forbidden"
source_modules = ["ludamus.pacts"]
forbidden_modules = ["ludamus.specs"]
